fixed image size on Safari

--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -7,7 +7,7 @@
 }
 
 .AboutSection .PhotoContainer {
-  @apply relative;
+  @apply relative w-full;
 }
 
 .AboutSection .PhotoContainer img {
